services/freshrss/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    spec:
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
      containers:
        - name: freshrss
          image: docker.io/freshrss/freshrss:1.24.1
          env: &env
            - name: TZ
              value: America/Denver
            - name: CRON_MIN
              value: 0,15,30,45
          volumeMounts: &volumeMounts
            - name: data-volume
              mountPath: /var/www/FreshRSS/data
          resources:
            limits:
              memory: 1G
          ports:
            - name: http
              containerPort: 80
        - name: freshrss-cron
          image: docker.io/freshrss/freshrss
          env: *env
          volumeMounts: *volumeMounts
          args: [cron, -f]

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
