services/freshrss/resources/freshrss.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: freshrss
          image: freshrss/freshrss
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/FreshRSS/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-volume

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
