services/freshrss/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://freshrss.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: freshrss
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: freshrss
    gethomepage.dev/name: FreshRSS
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-nginx/htpasswd
    nginx.ingress.kubernetes.io/auth-realm: durbin.casa
spec:
  ingressClassName: nginx
  rules:
    - host: freshrss.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
